--- a/Projects.html
+++ b/Projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -26,7 +27,10 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/HurcWLm_AdU?si=IRubIonSzb-bCVgf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <br>
 
+<h3>My Edited Video</h3>
+<br>
 
+<video width="320"  controls src="/Video.mp4">
    
 </body>
 </html>
