--- a/Signin.html
+++ b/Signin.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <head>
-    <h1> <pre>                                        Sign In                      </pre> </h1>    
+    <h1 id="Welcome">Sign In</h1>    
     </head>
 <main>
      <form>
