--- a/Signup.html
+++ b/Signup.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 <main>
 
-<h2><pre>                                                        Sign Up                       </pre></h2>
+<h2 id="Welcome">Sign Up</h2>
 
 <form>
 
